2014-09-24  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Replace more old internal calls for memory management by respective
	glib functions.

	* nasl/exec.c (cell2str, cell2str_and_size): Replaced estrdup() by g_strdup().
	(cell_cmp): Replaced efree() by g_free().
	(nasl_exec): Replaced emalloc() by g_malloc0(), estrdup() and g_strdup() and efree() by g_free().
	(exec_nasl_script): Replaced estrdup() by g_strdup() and efree() by g_free().

2014-09-24  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_text_utils.c (nasl_display): Flush stdout after printing the
	message.

2014-09-24  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (sig_alarm): Remove function.
	(plug_get_key): Don't exit plugin process after 120 seconds as some
	plugins may run longer and have a higher timeout value.

2014-09-23  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/osp.c (osp_param_str_to_type, osp_param_type_str): Handle new
	osp boolean param type.

	* base/osp.h (osp_param_type_t): Add new param type
	OSP_PARAM_TYPE_BOOLEAN.

2014-09-22  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 8.0+beta3.

2014-09-22  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 8.0+beta2 release.

	* CHANGES: Updated.

2014-09-22  Michael Wiegand <michael.wiegand@greenbone.net>

	Make libhiredis requirements more precise with information taken from
	the INSTALL file of openvas-scanner.

	* INSTALL: Add required minimum version to libhiredis entry, taken
	from openvas-scanner/INSTALL.

	* CMakeLists.txt: Add required minimum version to pkg-config check of
	libhiredis.

2014-09-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Replace more old internal calls for memory management by respective
	glib functions.

	* misc/ids_send.c (tcp_cksum, injectv6): Replaced emalloc() by
	g_malloc0() and efree() by g_free().
	(inject): Replaced efree() by g_free().